prevent css flickering on login page and prevent page resubmission

--- a/backend/website/static/website/styling.css
+++ b/backend/website/static/website/styling.css
@@ -53,3 +53,7 @@ body{
 .user{
     margin-left:.5em;
 }
+
+#login_fail{
+    display: none;
+}
